[package]
name = "txbuilder"
version = "0.0.1"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"

[dependencies]
revault_tx = { git = "https://github.com/darosior/revault_tx", branch = "feebumping_riddance", features = ["use-serde"] }
revault_net = { git = "https://github.com/darosior/revault_net", branch = "feebumping_riddance" }
serde_json = "1"
